# AImeath

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
.github/workflows/: ci-full.yml  ci.yml
backend/: CMakeLists.txt  main.cpp  ws_proxy_test.py  ws_test.py
desktop/: README.md  package-lock.json  package.json  vite.config.js
desktop/app/chat/backend/: CMakeLists.txt  README.md
desktop/app/chat/backend/benchmark/: README.md
desktop/app/chat/backend/include/: README.md
desktop/app/chat/backend/src/: README.md  chat_server.cpp
desktop/app/chat/backend/test/: README.md  chat_test.cpp
desktop/app/chat/frontend/: README.md
desktop/app/filemanager/backend/: CMakeLists.txt
desktop/app/filemanager/backend/src/: filemgr.cpp
desktop/app/go/backend/: README.md
desktop/app/go/frontend/: README.md
desktop/app/gomoku/backend/: CMakeLists.txt  README.md
desktop/app/gomoku/backend/benchmark/: README.md
desktop/app/gomoku/backend/include/: README.md
desktop/app/gomoku/backend/src/: README.md
desktop/app/gomoku/backend/test/: README.md
desktop/app/gomoku/frontend/: README.md
desktop/app/pacman/backend/: CMakeLists.txt  README.md
desktop/app/pacman/backend/benchmark/: README.md
desktop/app/pacman/backend/include/: README.md
desktop/app/pacman/backend/src/: README.md
desktop/app/pacman/backend/test/: README.md
desktop/app/pacman/frontend/: README.md
desktop/app/shared/game/: CMakeLists.txt
desktop/app/snake/backend/: CMakeLists.txt  README.md
desktop/app/snake/backend/benchmark/: README.md
desktop/app/snake/backend/include/: README.md
desktop/app/snake/backend/src/: README.md
desktop/app/snake/backend/test/: README.md
desktop/app/snake/frontend/: README.md
desktop/app/snake/frontend/__tests__/: snake.bench.js  snake.test.js
desktop/app/terminal/backend/: CMakeLists.txt
desktop/app/terminal/backend/include/: terminal.hpp
desktop/app/terminal/backend/src/: terminal.cpp
desktop/app/terminal/frontend/: index.vue
desktop/app/terminal/frontend/__tests__/: terminal.test.js
desktop/public/home/doc/: 远航星.txt
desktop/src/services/: config.js
desktop/test/: setup.js
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/config/: games.js
frontend/src/services/: gameSocket.js
frontend/src/views/: ChatPage.vue  GamePage.vue  HomePage.vue
module/: module.md
module/app/: CMakeLists.txt
module/app/include/: README.md
module/app/src/: README.md  app_mod.cpp  game_app_adapter.cpp
module/chat/: README.md
module/core/: CMakeLists.txt  README.md
module/core/benchmark/: README.md  eventmgr_bench.cpp  logger_bench.cpp  netconn_bench.cpp  threadpool_bench.cpp  timer_bench.cpp  ws_server_bench.cpp
module/core/include/: README.md  config.hpp  eventmgr.hpp  logger.hpp  message_queue.hpp  netconn.hpp  pty_session.hpp  threadmgr.hpp  timer.hpp  vfs.hpp  ws_server.hpp  wsutil.hpp
module/core/src/: README.md  config.cpp  eventmgr.cpp  logger.cpp  netconn.cpp  pty_session.cpp  threadmgr.cpp  timer.cpp  vfs.cpp  ws_server.cpp  wsutil.cpp
module/core/test/: README.md  eventmgr_test.cpp  logger_test.cpp  message_queue_test.cpp  netconn_test.cpp  pty_session_test.cpp  threadpool_test.cpp  timer_test.cpp  vfs_test.cpp  ws_server_test.cpp
module/game/: CMakeLists.txt  README.md
module/game/benchmark/: README.md  game_bench.cpp
module/game/include/: gamemod.hpp
module/game/src/: gamemod.cpp
module/game/test/: README.md  game_test.cpp
module/go/: CMakeLists.txt  README.md
module/gomoku/: CMakeLists.txt  README.md
module/llm/: CMakeLists.txt
module/llm/include/: llm_client.hpp  llm_utils.hpp
module/llm/src/: llm_client.cpp
module/llm/test/: llm_test.cpp
module/pacman/: CMakeLists.txt  README.md
module/snake/: CMakeLists.txt  README.md
module/snake/benchmark/: README.md
module/snake/test/: README.md
test/: chat_stress.js  package.json  quick_stress.sh  run_all.sh  run_stress_test.sh  start_server.sh
